Project-main/CP/10_Promotheus/prom/5_ingress.yaml
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: prometheus
  namespace: demo
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/load-balancer-name: aws-load-balancer-controller
    alb.ingress.kubernetes.io/subnets: subnet-06704c4e34a0c43a8 , subnet-005dea2560e69d3cc
spec:
  rules:
  - host: prometheus.cpproject.com
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-operated
          servicePort: 9090
